--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap");
 
 :root {
   --moderate-blue: hsl(238, 40%, 52%);
@@ -11,18 +11,16 @@
   --very-light-gray: hsl(228, 33%, 97%);
   --white: hsl(0, 0%, 100%);
   --mobile: 376px;
-  --desktop: 700px;
+  --desktop: 730px;
 }
 
 html {
-  box-sizing: border-box;
+  box-sizing: content-box;
   font-size: 16px;
-  background-color: var(--very-light-gray);
 }
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
 }
 
 body,
@@ -35,7 +33,7 @@ h6,
 p,
 ol,
 ul {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   margin: 0;
   padding: 0;
   font-weight: normal;
@@ -54,23 +52,13 @@ a {
   text-decoration: none;
 }
 
-.app {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 2rem;
-  padding: 20px;
-}
-
 .hide-on-mobile {
   @media (max-width: 470px) {
     display: none !important;
   }
 }
-
 .hide-on-desktop {
   @media (min-width: 470px) {
-    display: none !important;
+    display: none;
   }
 }
