--- a/src/components/commentBox/commentBox.scss
+++ b/src/components/commentBox/commentBox.scss
@@ -6,6 +6,7 @@
   background-color: var(--white);
   padding: 1rem;
   min-width: 300px;
+  margin-bottom: 1rem;
   .reply-text {
     margin-left: 8px;
   }
